--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="title_activity_wifi_p2_p">WifiP2P</string>
+    <string name="title_activity_main2">MainActivity2</string>
 </resources>
