--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">My Application</string>
     <string name="title_activity_wifi_p2_p">WifiP2P</string>
     <string name="title_activity_main2">MainActivity2</string>
+    <string name="title_activity_debug_audio">DebugAudioActivity</string>
 </resources>
