--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_activity_wifi_p2_p">WifiP2P</string>
     <string name="title_activity_main2">MainActivity2</string>
     <string name="title_activity_debug_audio">DebugAudioActivity</string>
+    <string name="title_activity_client">ClientActivity</string>
+    <string name="title_activity_server">ServerActivity</string>
 </resources>
